# qgis

./: CMakeLists.txt
cmake/: Bundle.cmake
cmake_templates/: Doxyfile.in  qgsconfig.h.in
i18n/: CMakeLists.txt  ngqgis_ru.ts
images/: images.qrc
linux/: com.nextgis.ngqgis.appdata.xml.in  com.nextgis.ngqgis.desktop.in
mac/: app.info.plist.in
python/PyQt6/gui/auto_generated/: qgisinterface.sip.in
python/plugins/: CMakeLists.txt
python/pyplugin_installer/: installer_data.py
rpm/: qgis.spec.template
scripts/: appinfo2ui.py  release.pl  ts2appinfo.py.in
scripts/spell_check/: .agignore
src/3d/: CMakeLists.txt
src/analysis/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  ngcustomization.cpp  ngcustomization.h  ngsaboutdialog.cpp  ngsaboutdialog.h  ngupdater.cpp  ngupdater.h  qgisapp.cpp  qgisapp.h  qgisappinterface.cpp  qgisappinterface.h  qgsabout.cpp  qgsapplayertreeviewmenuprovider.cpp  qgsapplayertreeviewmenuprovider.h  qgspluginregistry.cpp  qgswelcomepage.cpp
src/app/options/: ngauthoptions.cpp  ngauthoptions.h  qgsoptions.cpp
src/auth/: CMakeLists.txt
src/auth/nextgis/: CMakeLists.txt
src/auth/nextgis/core/: qgsauthnextgismethod.cpp  qgsauthnextgismethod.h
src/auth/nextgis/gui/: qgsauthnextgisedit.cpp  qgsauthnextgisedit.h
src/core/: CMakeLists.txt  qgsapplication.cpp  qgsapplication.h  qgscplhttpfetchoverrider.h
src/core/auth/: qgsauthmanager.cpp
src/core/network/: qgsnetworkaccessmanager.cpp
src/core/textrenderer/: qgsfontmanager.cpp  qgsfontmanager.h
src/gui/: CMakeLists.txt  qgisinterface.h  qgsnewvectorlayerdialog.cpp
src/native/: CMakeLists.txt
src/native/linux/: qgslinuxnative.cpp
src/providers/grass/: CMakeLists.txt
src/quickgui/: CMakeLists.txt
src/ui/: qgisapp.ui  qgsoptionsbase.ui
